# car-appointment-assistant

./: .gitignore  README.md  debug_agent.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
src/: context.py
src/agent/: graph.py
src/api/: schema.py
src/data/: mock_data.py
src/mcp/: tools.py
